- Issue #9: Added code for detecting if an upload failed because the daily quota limit has been reached and if so aborts all started uploads and shows a dialog telling that the program can not do anymore uploading right now. - Fixed a translation miss where a line was in swedish with english settings and english with swedish settings. - Added a couple of more error checks (try-catch blocks) and removed one error check (if statement) that IntelliJ claimed to be redundant.

--- a/src/main/java/io/github/stekeblad/videouploader/main/mainWindow.fxml
+++ b/src/main/java/io/github/stekeblad/videouploader/main/mainWindow.fxml
@@ -20,7 +20,7 @@
                 <Insets left="20.0"/>
             </padding>
             <Label id="label_presetProgress" fx:id="label_presetProgress" text="Applying preset... (3 left)"/>
-            <ProgressBar prefHeight="18.0" prefWidth="47.0"/>
+            <ProgressBar fx:id="prog_presetProgress" prefHeight="18.0" prefWidth="47.0"/>
         </HBox>
     </ToolBar>
     <ListView fx:id="listView" layoutX="15.0" layoutY="350.0" AnchorPane.bottomAnchor="15.0"
